<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_title">Gasolina x Etanol</string>
    <string name="txt_hint_edit_gasolina">R$ Gasolina</string>
    <string name="txt_hint_edit_etanol">R$ Etanol</string>
    <string name="txt_resultado">Resultado</string>
    <string name="txt_contactNumber">Telefone de contato</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="txt_button_calcular">Calcular</string>
</resources>